--- a/index.html
+++ b/index.html
@@ -44,10 +44,11 @@
         <h1>AI Navbar Demo</h1>
         <p>
             This is a sample paragraph added below the navigation bar. It is here only to fulfill the requirement of the task. The text does not specific
-            meaning and serves as a placeholder to demonstrate proper structure. You can eplace this text with actual content later if needed.
+            meaning and serves as a placeholder to demonstrate proper structure.
         </p>
     </main>
 </body>
 <script src="script.js"></script>
+
 
 </html>
